# libtado

./: .env  .env.template  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  .tpl.test.env  .travis.yml  .yamllint  Pipfile  README.md  check.py  cog.toml  example.py  generate_json_schemas.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_test.txt  setup.py  tox.ini  versions.json
.github/: dependabot.yml
.github/workflows/: check_json_schemas.yml  conventional-commit.yml  lint.yml  release-feat-dryrun.yml  release-master.yml  release-test.yml  scheduled.yml  template_test.yml  test.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/contributing/: index.html
0.1/faq/: index.html
0.1/source/: api.rst
3.5.0/: 404.html  index.html  sitemap.xml
3.5.0/contributing/: index.html
3.5.0/faq/: index.html
3.5.0/source/: conf.py
3.5.1/: 404.html  index.html  objects.inv  sitemap.xml
3.5.1/contributing/: index.html
3.5.1/faq/: index.html
3.5.1/search/: search_index.json
3.5.1/source/: index.rst
docs/: Makefile  README.md  contributing.md  faq.md  index.md  requirements.txt
docs/api/: reference.md  usage.md
docs/cli/: configuration.md  reference.md  usage.md
docs/getting-started/: installation.md  references.md  usage.md
docs/source/: api-methods.rst  api.rst  cli-usage.rst  conf.py  index.rst  installation.rst
latest/contributing/: index.html
latest/faq/: index.html
latest/overrides/: main.html
libtado/: __main__.py  api.py  cli_utils.py
schemas/: consumptionOverview.json  consumptionOverview.jsonschema  fake_schema.jsonschema  get_air_comfort.json  get_air_comfort_geoloc.json  get_away_configuration.json  get_capabilities.json  get_consumption_details.json  get_consumption_overview.json  get_default_overlay.json  get_device_usage.json  get_devices.json  get_early_start.json  get_energy_insights.json  get_energy_settings.json  get_heating_circuits.json  get_heating_system.json  get_home.json  get_home_state.json  get_incidents.json  get_installations.json  get_invitations.json  get_me.json  get_measuring_device.json  get_measuring_devices.json  get_mobile_devices.json  get_report.json  get_running_times.json  get_schedule.json  get_schedule_blocks.json  get_schedule_timetables.json  get_state.json  get_users.json  get_weather.json  get_zone_states.json  get_zones.json  set_cost_simulation.json  test.json
tests/: test_api.py
tests/api/: api_test.py  auth.py  test_api.py  test_jsonschema.py  utils.py  (+2 more)
(+52 files in other folders)
