[tool.poetry]
name = "libtado"
version = "3.5.1"
description = "A library (and a command line client) to control your Tado Smart Thermostat."
authors = ["Germain Lefebvre <germain.lefebvre4@gmail.com>"]
license = "GNU GPL v3.0"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",

]

[tool.poetry.dependencies]
python = "^3.7"
click = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = {extras = ["python"], version = "*"}
mkdocs-click = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
